# swiss-ambulatory-grouper-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
docs/: contributing-with-external-data.md  data-sources.md  local-data-layout.md  local-docker-runtime.md
java-bridge/src/main/java/ch/itignos/tarifmatcherbridge/: BridgeApplication.java  RuntimeConfig.java  TarifMatcherAdapter.java
scripts/: build_database.py  build_java_bridge.sh  check_sources.py  docker-entrypoint.sh  prepare_tarifmatcher_runtime.py  print_source_requirements.py
src/swiss_ambulatory_grouper_mcp/: __init__.py  config.py  lookup_service.py  main.py  mcp_server.py  source_inventory.py  tarifmatcher_client.py  tarifmatcher_prepare.py  tarifmatcher_runtime.py  tarifmatcher_tools.py
src/swiss_ambulatory_grouper_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/swiss_ambulatory_grouper_mcp/importers/: __init__.py  bfs_icd10.py  oaat_ambp.py  oaat_capitulum.py  oaat_lkaat.py  oaat_tardoc.py  sqlite_copy.py  tabular.py
